tests/liquid/pos/simple/parse-00.js

var a1 = /* number  */ 1;
var b1 = /* {number | v > 0 } */ 1;
var c1 = /* {number | v = 1} */ 1;

var d1 = /* string */ "aaa";
var e1 = /* {string | v = "aaa"} */ "aaa";


var a = /*: number  */ 1;
var b = /*: {number | v > 0 } */ 1;
var c = /*: {number | v = 1} */ 1;

var d = /*: string */ "aaa";
var e = /*: {string | v = "aaa"} */ "aaa";

