tests/liquid/neg/simple/parse-01.js
var c = /*: string  */ 1;

var e = /*: [string] */ "aaa";

